--- a/savvy-saver-front-main/package.json
+++ b/savvy-saver-front-main/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.9.2",
     "@phosphor-icons/react": "^2.0.15",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dayjs": "^1.11.10",
+    "graphql": "^16.8.1",
     "react": "^18.2.0",
     "react-currency-input-field": "^3.6.14",
     "react-datepicker": "^5.0.0",
@@ -14,8 +17,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "dayjs": "^1.11.10"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
