--- a/savvy-saver-front-main/package.json
+++ b/savvy-saver-front-main/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.9.2",
+    "@koa/cors": "^5.0.0",
     "@phosphor-icons/react": "^2.0.15",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
