--- a/savvy-saver-front-main/package.json
+++ b/savvy-saver-front-main/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "buffer": "^6.0.3",
+    "chart.js": "^4.4.1",
+    "chartjs-adapter-dayjs-4": "^1.0.4",
     "crypto-browserify": "^3.12.0",
     "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
@@ -24,6 +26,7 @@
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-currency-input-field": "^3.6.14",
     "react-datepicker": "^5.0.0",
     "react-dom": "^18.2.0",
