--- a/savvy-saver-front-main/package.json
+++ b/savvy-saver-front-main/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.9.2",
     "@koa/cors": "^5.0.0",
+    "@kurkle/color": "^0.3.2",
     "@phosphor-icons/react": "^2.0.15",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
